[package]
name = "oculus-tls-extractor"
version = "0.1.0"
authors = ["Igor null <m1el.2027@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
path = "injector.rs"
name = "injector"

[lib]
crate-type = ["cdylib"]
path = "injectee.rs"
name = "injectee"
